k8s/todo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
spec:
  selector:
    app: todo-api
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
